--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-name:         Hello World;
+name:         Pollo Craft;
 tagline:      A responsive theme for your project on GitHub Pages
 baseurl:      ""
 locale:       "en"
