--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-name:         Pollo Craft;
+name:         Cyan Softwares
 tagline:      A responsive theme for your project on GitHub Pages
 baseurl:      ""
 locale:       "en"
